--- a/Youtube.html
+++ b/Youtube.html
@@ -4,23 +4,66 @@
         <title>Youtube.com</title>
         
         <link rel="stylesheet" href="style.css">
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <input class="searchBar" type="text" placeholder="Search">
+        
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class="thumbnail1" src="Thumbnails/thumbnail-1.webp">
+            </div>
 
-        <img class="thumbnail1" src="Thumbnails/thumbnail-1.webp">
+            <div>
+				<div class="channelpicture">
+					<img class="profile-picture" src="channelPics/channel-1.jpeg">
+				</div>
+				<div class="videoInfo">
+					<p class="title"> 
+                    	Talking Tech and AI with Google CEO Sundar Pichai!
+                	</p>
 
-        <p class="title"> 
-            Talking Tech and AI with Google CEO Sundar Pichai!
-        </p>
+					<p class="author"> 
+						Marques Brownlee
+					</p>
 
-        <p class="stats"> 
-            3.4M Views &#183; 6 months ago
-        </p>
+					<p class="stats"> 
+						3.4M Views &#183; 6 months ago
+					</p>
 
-        <p class="author"> 
-            Marques Brownlee &#10003;
-        </p>
+				</div> 
+            </div>
+         </div>
+
+		 <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class="thumbnail1" src="Thumbnails/thumbnail-2.webp">
+            </div>
+
+            <div>
+				<div class="channelpicture">
+					<img class="profile-picture" src="channelPics/channel-2.jpeg">
+				</div>
+				<div class="videoInfo">
+					<p class="title"> 
+                    	Try Not To Laugh Challenge #9
+                	</p>
+
+					<p class="author"> 
+						Markiplier
+					</p>
+
+					<p class="stats"> 
+						19M views &#183; 4 years ago
+					</p>
+
+				</div> 
+            </div>
+         </div>
+
     </body>
 </html>
