--- a/Youtube.html
+++ b/Youtube.html
@@ -13,57 +13,164 @@
     <body>
         <input class="searchBar" type="text" placeholder="Search">
         
-        <div class="video-preview">
-            <div class="thumbnail-row">
-                <img class="thumbnail1" src="Thumbnails/thumbnail-1.webp">
-            </div>
-
-            <div>
-				<div class="channelpicture">
-					<img class="profile-picture" src="channelPics/channel-1.jpeg">
+		<div class="video-grid">
+				<div class="video-preview">
+				<div class="thumbnail-row">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-1.webp">
 				</div>
-				<div class="videoInfo">
-					<p class="title"> 
-                    	Talking Tech and AI with Google CEO Sundar Pichai!
-                	</p>
 
-					<p class="author"> 
-						Marques Brownlee
-					</p>
+				<div class="video-info-grid">
+					<div class="channelpicture">
+						<img class="profile-picture" src="channelPics/channel-1.jpeg">
+					</div>
+					<div class="videoInfo">
+						<p class="title"> 
+							Talking Tech and AI with Google CEO Sundar Pichai!
+						</p>
 
-					<p class="stats"> 
-						3.4M Views &#183; 6 months ago
-					</p>
+						<p class="author"> 
+							Marques Brownlee
+						</p>
 
-				</div> 
-            </div>
-         </div>
+						<p class="stats"> 
+							3.4M Views &#183; 6 months ago
+						</p>
 
-		 <div class="video-preview">
-            <div class="thumbnail-row">
-                <img class="thumbnail1" src="Thumbnails/thumbnail-2.webp">
-            </div>
-
-            <div>
-				<div class="channelpicture">
-					<img class="profile-picture" src="channelPics/channel-2.jpeg">
+					</div> 
 				</div>
-				<div class="videoInfo">
-					<p class="title"> 
-                    	Try Not To Laugh Challenge #9
-                	</p>
+			</div>
 
-					<p class="author"> 
-						Markiplier
-					</p>
+			<div class="video-preview">
+				<div class="thumbnail-row">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-2.webp">
+				</div>
 
-					<p class="stats"> 
-						19M views &#183; 4 years ago
-					</p>
+				<div class="video-info-grid">
+					<div class="channelpicture">
+						<img class="profile-picture" src="channelPics/channel-2.jpeg">
+					</div>
+					<div class="videoInfo">
+						<p class="title"> 
+							Try Not To Laugh Challenge #9
+						</p>
 
-				</div> 
-            </div>
-         </div>
+						<p class="author"> 
+							Markiplier
+						</p>
+
+						<p class="stats"> 
+							19M views &#183; 4 years ago
+						</p>
+
+					</div> 
+				</div>
+			</div>
+
+			<div class="video-preview">
+				<div class="thumbnail-row">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-1.webp">
+				</div>
+
+				<div class="video-info-grid">
+					<div class="channelpicture">
+						<img class="profile-picture" src="channelPics/channel-1.jpeg">
+					</div>
+					<div class="videoInfo">
+						<p class="title"> 
+							Talking Tech and AI with Google CEO Sundar Pichai!
+						</p>
+
+						<p class="author"> 
+							Marques Brownlee
+						</p>
+
+						<p class="stats"> 
+							3.4M Views &#183; 6 months ago
+						</p>
+
+					</div> 
+				</div>
+			</div>
+
+			<div class="video-preview">
+				<div class="thumbnail-row">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-2.webp">
+				</div>
+
+				<div class="video-info-grid">
+					<div class="channelpicture">
+						<img class="profile-picture" src="channelPics/channel-2.jpeg">
+					</div>
+					<div class="videoInfo">
+						<p class="title"> 
+							Try Not To Laugh Challenge #9
+						</p>
+
+						<p class="author"> 
+							Markiplier
+						</p>
+
+						<p class="stats"> 
+							19M views &#183; 4 years ago
+						</p>
+
+					</div> 
+				</div>
+			</div>
+
+			<div class="video-preview">
+				<div class="thumbnail-row">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-1.webp">
+				</div>
+
+				<div class="video-info-grid">
+					<div class="channelpicture">
+						<img class="profile-picture" src="channelPics/channel-1.jpeg">
+					</div>
+					<div class="videoInfo">
+						<p class="title"> 
+							Talking Tech and AI with Google CEO Sundar Pichai!
+						</p>
+
+						<p class="author"> 
+							Marques Brownlee
+						</p>
+
+						<p class="stats"> 
+							3.4M Views &#183; 6 months ago
+						</p>
+
+					</div> 
+				</div>
+			</div>
+
+			<div class="video-preview">
+				<div class="thumbnail-row">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-2.webp">
+				</div>
+
+				<div class="video-info-grid">
+					<div class="channelpicture">
+						<img class="profile-picture" src="channelPics/channel-2.jpeg">
+					</div>
+					<div class="videoInfo">
+						<p class="title"> 
+							Try Not To Laugh Challenge #9
+						</p>
+
+						<p class="author"> 
+							Markiplier
+						</p>
+
+						<p class="stats"> 
+							19M views &#183; 4 years ago
+						</p>
+
+					</div> 
+				</div>
+			</div>
+		</div>
+        
 
     </body>
 </html>
