--- a/Youtube.html
+++ b/Youtube.html
@@ -68,24 +68,24 @@
 
 			<div class="video-preview">
 				<div class="thumbnail-row">
-					<img class="thumbnail1" src="Thumbnails/thumbnail-1.webp">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-3.webp">
 				</div>
 
 				<div class="video-info-grid">
 					<div class="channelpicture">
-						<img class="profile-picture" src="channelPics/channel-1.jpeg">
+						<img class="profile-picture" src="channelPics/channel-3.jpeg">
 					</div>
 					<div class="videoInfo">
 						<p class="title"> 
-							Talking Tech and AI with Google CEO Sundar Pichai!
+							Crazy Tik Toks Taken Moments Before DISASTER
 						</p>
 
 						<p class="author"> 
-							Marques Brownlee
+							SSSniperWolf
 						</p>
 
 						<p class="stats"> 
-							3.4M Views &#183; 6 months ago
+							12M views &#183; 1 year ago
 						</p>
 
 					</div> 
@@ -94,24 +94,24 @@
 
 			<div class="video-preview">
 				<div class="thumbnail-row">
-					<img class="thumbnail1" src="Thumbnails/thumbnail-2.webp">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-4.webp">
 				</div>
 
 				<div class="video-info-grid">
 					<div class="channelpicture">
-						<img class="profile-picture" src="channelPics/channel-2.jpeg">
+						<img class="profile-picture" src="channelPics/channel-4.jpeg">
 					</div>
 					<div class="videoInfo">
 						<p class="title"> 
-							Try Not To Laugh Challenge #9
+							The Simplest Math Problem No One Can Solve - Collatz Conjecture
 						</p>
 
 						<p class="author"> 
-							Markiplier
+							Collatz Conjecture
 						</p>
 
 						<p class="stats"> 
-							19M views &#183; 4 years ago
+							18M views &#183; 4 months ago
 						</p>
 
 					</div> 
@@ -120,24 +120,24 @@
 
 			<div class="video-preview">
 				<div class="thumbnail-row">
-					<img class="thumbnail1" src="Thumbnails/thumbnail-1.webp">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-5.webp">
 				</div>
 
 				<div class="video-info-grid">
 					<div class="channelpicture">
-						<img class="profile-picture" src="channelPics/channel-1.jpeg">
+						<img class="profile-picture" src="channelPics/channel-5.jpeg">
 					</div>
 					<div class="videoInfo">
 						<p class="title"> 
-							Talking Tech and AI with Google CEO Sundar Pichai!
+							Kadane's Algorithm to Maximum Sum Subarray Problem
 						</p>
 
 						<p class="author"> 
-							Marques Brownlee
+							CS Dojo
 						</p>
 
 						<p class="stats"> 
-							3.4M Views &#183; 6 months ago
+							519K views &#183; 5 years ago
 						</p>
 
 					</div> 
@@ -146,24 +146,24 @@
 
 			<div class="video-preview">
 				<div class="thumbnail-row">
-					<img class="thumbnail1" src="Thumbnails/thumbnail-2.webp">
+					<img class="thumbnail1" src="Thumbnails/thumbnail-6.webp">
 				</div>
 
 				<div class="video-info-grid">
 					<div class="channelpicture">
-						<img class="profile-picture" src="channelPics/channel-2.jpeg">
+						<img class="profile-picture" src="channelPics/channel-6.jpeg">
 					</div>
 					<div class="videoInfo">
 						<p class="title"> 
-							Try Not To Laugh Challenge #9
+							Anything You Can Fit In The Circle I’ll Pay For
 						</p>
 
 						<p class="author"> 
-							Markiplier
+							MrBeast
 						</p>
 
 						<p class="stats"> 
-							19M views &#183; 4 years ago
+							141M views &#183; 1 year ago
 						</p>
 
 					</div> 
