--- a/Youtube.html
+++ b/Youtube.html
@@ -11,7 +11,13 @@
     </head>
 
     <body>
-        <input class="searchBar" type="text" placeholder="Search">
+		<div class="header">
+			<div class="left-section">left-section</div>
+			<div class="middle-section">
+				<input class="searchBar" type="text" placeholder="Search">
+			</div>
+			<div class="right-section">right-section</div>
+		</div>
         
 		<div class="video-grid">
 				<div class="video-preview">
