--- a/Youtube.html
+++ b/Youtube.html
@@ -12,11 +12,27 @@
 
     <body>
 		<div class="header">
-			<div class="left-section">left-section</div>
+			<div class="left-section">
+				<img class="hamburger-menu" src="icons/hamburger-menu.svg">
+				<img class="youtube-logo" src="icons/youtube-logo.svg">
+			</div>
+
 			<div class="middle-section">
 				<input class="searchBar" type="text" placeholder="Search">
+				<button class="search-button">
+					<img class="search-icon" src="icons/search.svg">
+				</button>
+				<button class="voice-search-button">
+					<img class="voice-icon" src="icons/voice-search-icon.svg">
+				</button>
 			</div>
-			<div class="right-section">right-section</div>
+
+			<div class="right-section">
+				<img class="upload-icon" src="icons/upload.svg">
+				<img class="ytApps-icon" src="icons/youtube-apps.svg">
+				<img class="notif-icon" src="icons/notifications.svg">
+				<img class="channel-icon" src="icons/my-channel.jpeg">
+			</div>
 		</div>
         
 		<div class="video-grid">
