--- a/Youtube.html
+++ b/Youtube.html
@@ -17,6 +17,10 @@
 				<img class="youtube-logo" src="icons/youtube-logo.svg">
 			</div>
 
+			<div class="sidebar">
+				sidebar
+			</div>
+
 			<div class="middle-section">
 				<input class="searchBar" type="text" placeholder="Search">
 				<button class="search-button">
