--- a/Youtube.html
+++ b/Youtube.html
@@ -34,7 +34,10 @@
 			<div class="right-section">
 				<img class="upload-icon" src="icons/upload.svg">
 				<img class="ytApps-icon" src="icons/youtube-apps.svg">
-				<img class="notif-icon" src="icons/notifications.svg">
+				<div class="notif-div">
+					<img class="notif-icon" src="icons/notifications.svg">
+					<div class="notif-count">3</div>
+				</div>
 				<img class="channel-icon" src="icons/my-channel.jpeg">
 			</div>
 		</div>
@@ -43,6 +46,7 @@
 				<div class="video-preview">
 				<div class="thumbnail-row">
 					<img class="thumbnail1" src="Thumbnails/thumbnail-1.webp">
+					<div class="video-time">14:20</div>
 				</div>
 
 				<div class="video-info-grid">
@@ -69,6 +73,7 @@
 			<div class="video-preview">
 				<div class="thumbnail-row">
 					<img class="thumbnail1" src="Thumbnails/thumbnail-2.webp">
+					<div class="video-time">16:30</div>
 				</div>
 
 				<div class="video-info-grid">
@@ -95,6 +100,7 @@
 			<div class="video-preview">
 				<div class="thumbnail-row">
 					<img class="thumbnail1" src="Thumbnails/thumbnail-3.webp">
+					<div class="video-time">10:22</div>
 				</div>
 
 				<div class="video-info-grid">
@@ -121,6 +127,7 @@
 			<div class="video-preview">
 				<div class="thumbnail-row">
 					<img class="thumbnail1" src="Thumbnails/thumbnail-4.webp">
+					<div class="video-time">4:34</div>
 				</div>
 
 				<div class="video-info-grid">
@@ -147,6 +154,7 @@
 			<div class="video-preview">
 				<div class="thumbnail-row">
 					<img class="thumbnail1" src="Thumbnails/thumbnail-5.webp">
+					<div class="video-time">19:25</div>
 				</div>
 
 				<div class="video-info-grid">
@@ -173,6 +181,7 @@
 			<div class="video-preview">
 				<div class="thumbnail-row">
 					<img class="thumbnail1" src="Thumbnails/thumbnail-6.webp">
+					<div class="video-time">56:43</div>
 				</div>
 
 				<div class="video-info-grid">
