--- a/Youtube.html
+++ b/Youtube.html
@@ -18,7 +18,30 @@
 			</div>
 
 			<div class="sidebar">
-				sidebar
+				<div class="sidebar-link">
+					<img src="sidebarIcons/home.svg">
+					<div>Home</div>
+				</div>
+				<div class="sidebar-link">
+					<img src="sidebarIcons/explore.svg">
+					<div>Explore</div>
+				</div>
+				<div class="sidebar-link">
+					<img src="sidebarIcons/subscriptions.svg">
+					<div>Subscriptions</div>
+				</div>
+				<div class="sidebar-link">
+					<img src="sidebarIcons/originals.svg">
+					<div>Originals</div>
+				</div>
+				<div class="sidebar-link">
+					<img src="sidebarIcons/youtube-music.svg">
+					<div>Youtube Music</div>
+				</div>
+				<div class="sidebar-link">
+					<img src="sidebarIcons/library.svg">
+					<div>Library</div>
+				</div>
 			</div>
 
 			<div class="middle-section">
